# music-cleanup

./: .env.example  .gitignore  README.md  pyproject.toml
beetsplug/: audit.py  genre.py
config/: backup.yaml  bad-genres.txt  config.example.yaml  config.yaml  recovery.example.yaml  recovery.yaml
scripts/: beet-backup.sh  beet-recovery.sh  beet.sh  cleanup_bad_genres.py  mount-nfs.sh  move_bad_albums.py  prune_missing_from_library_db.py  repair_library_paths.py  setup-venv.sh
src/music_cleanup/: __init__.py
src/music_cleanup/beetsplug/: __init__.py
tests/: conftest.py  test_audit_plugin.py  test_cleanup_bad_genres.py  test_genre_plugin.py
