[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "music-cleanup"
version = "0.1.0"
description = "Local beets plugins and tooling for music canonicalization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beets[chroma,fetchart,lastgenre,scrub]>=2.2.0",
  "discogs-client",
  "pylast",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
